# week2_cpp_exercises

./: .gitignore  LICENSE.txt  README.md
Section_1_Vector_Functionality/: CMakeLists.txt
Section_1_Vector_Functionality/include/: vector_functions.h
Section_1_Vector_Functionality/src/: CMakeLists.txt  exercise_main.cpp  vector_functions.cpp
Section_1_Vector_Functionality/test/src/: CMakeLists.txt  test_exercises.cpp
Section_2_Monte_Carlo_Integrator/: CMakeLists.txt
Section_2_Monte_Carlo_Integrator/src/: CMakeLists.txt  MonteCarlo.cpp
Section_3_Fractions/src/: FractionAnalyser.cpp  FractionChecker.cpp
Section_3_Smart_Pointers/: CMakeLists.txt
Section_3_Smart_Pointers/src/: CMakeLists.txt  University.cpp  smart_pointers.cpp
Section_4_Smart_Pointers/include/: University_Types.h
Section_4_Smart_Pointers/src/: University_Main.cpp  University_Types.cpp  smart_pointers.cpp
exampleClass/include/: Sphere.h
exampleClass/src/: Sphere.cpp
